# mdmodel

./: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  LICENSE  Makefile  README.md  cmake_install.cmake
Testing/Temporary/: CTestCostData.txt
include/: Document.h  Node.h  Parser.h
include/mdmodel/: Node.h
src/: Document.cpp  Node.cpp  Parser.cpp
tests/: Test.cpp
